--- a/apps/apps/http-backend/package.json
+++ b/apps/apps/http-backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ws-backend",
+  "name": "http-backend",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -15,9 +15,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/ws": "^8.18.1",
-    "jsonwebtoken": "^9.0.2",
-    "ws": "^8.18.3"
+    "@types/express": "^5.0.3",
+    "express": "^5.1.0"
   }
 }
